<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RadioRec+</string>
    <string name="networkNotAvailable">Network not available!</string>
    <string name="internetadresseNichtErreichbar">Internet address not reachable!</string>
    <string name="kannNichtAufSdCardSchreiben">Can not write to SD-Card...!</string>
    <string name="isSdCardKorrekt">Is SD-Card correct configured in the settings menu?</string>
    <string name="aufnahmeUnterbrochen">Recording interrupted...!</string>
    <string name="verbindeInternet">Is the Internet connected...?? If yes, the radio stream might not be reachable at the moment.</string>
    <string name="willstDuWeiterHoeren">Do you want to listen in the background or should I stop playing and recording?</string>
    <string name="wegDamit">Stop it</string>
    <string name="weiterHoeren">Continue in background</string>
    <string name="onAir">On-Air...</string>
    <string name="info">Info</string>
    <string name="info_copyright"> &#169; 2010-2015 by Koni</string>
    <string name="info_design">Thanks to rakudave for the perfect GUI !!</string>
    <string name="info_translation_it">Thanks to Manfred M. for the Italian translation!</string>
    <string name="ende">End</string>
    <string name="settings">Settings</string>
    <string name="zurueck">Back</string>
    <string name="email_androider">androider@wolke7.net</string>
    <string name="nurLive">This radio is only on air when there is a live broadcast! Inform yourself on the homepage about the next live streams.</string>
    <string name="neinDanke">No Thanks</string>
    <string name="donate">Donate</string>
    <string name="donate_adfree">Donate/AdFree</string>    
    <string name="save">Save</string>
    <string name="antiAdsText">Already donated? This app is free and will remain free! If you like the app or if you are bored about the ads so please do not hesitate to donate. All donors with CHF/EUR 2.00 or more will receive a personal \'Anti-Ads-Key\'. With it you can enjoy RadioRec+ without any advertisement! Please leave you email after donation.</string>
    <string name="antiAdsKeyHere">After your donation you should receive an email within a few days with the \'anti ads key\'. If you don\'t receive your key please drop me an email (androider@wolke7.net).\n\nEnter anti ads key here and press Save.</string>
	<string name="keineEingabe">Nothing entered ??</string>
	<string name="danke">Thank you !!!</string>
	<string name="infoSDCard">Your recorded files are on your SD-Card.\nYou\'ll find them in the default directory \"RadioRec\". In the Settings you can change this path.</string>
	<string name="useExtSdCard">Use external SD-Card</string>
	<string name="externalCard">External SD-Card</string>
	<string name="infoFeatureEmail">Is your station or a feature missing? Or do you have any comment? Click this email address and share your comment with me. \n\n---  androider@wolke7.net  ---</string>
	<string name="infoDatenverbrauchFrage">How much data is used while listening with RadioRec+ ?? </string>
	<string name="infoDatenverbrauchAntwort">Answer: Around 60MB/h. The Radio stations are streaming with 128kbps. So calculate : 128\'000 Bit/s : 8 = 16\'000 Byte/s. It is 57.6 MB/hour (16\'000x3200 : 1\'000\'000). Tip: Use WLAN, so data consumption is no problem :-)</string>
	<string name="infoSdCardAndroid44Title">External SD Card from Android 4.4+</string>
	<string name="infoSdCardAndroid44Text">Since Android 4.4+ Google forces every app to save files to an external sd card in a special place. If you have choosen \'Use external SD-Card\' in the settings then it is: \n /storage/extSdCard/Android/data/com.rothconsulting.andorid.radiorec/files/RadioRec</string>
	<string name="speicherOrt">Save location</string>
	<string name="sdcardPath">By default the MP3 recordings are stored on the SD-Card in the path \"sdcard/RadioRec\".\nHere you can change this path.\nAttention: The path to the storage location must be valid and match exactly! Since Android 4.4+ path to the external (removable) starage cannot be changed. This is a Google restriction. Sorry. (See \'Info\' Menu too)</string>
	<string name="reset">Reset</string>
	<string name="wifiVorsicht">With this 3 options you can set the Wireless behavior. Attention: If \'WiFi always on\' your battery will be used more. Switch it off here or at the advanced wireless settings to save power.</string>
	<string name="wifiStandby">WiFi Standby Policy</string>
	<string name="wifiSettings">WLAN standby mode</string>
	<string name="wifiImmerAn"> WiFi never automatically off</string>
	<string name="wifiImmerAnWennAmStrom"> Keep WiFi on when plugged in</string>
	<string name="wifiAutomatischAus"> Automatically off when screen turns off</string>
	<string name="wifiSleepNotYetDefined">WiFi Policy not set yet (Default).</string>
	<string name="google_play_store">Google Play Store</string>
	<string name="donate_paypal_cc">Donate via PayPal or credit card</string>
	<string name="donate_google_play_store">Donate via Google Play Store</string>
	<string name="donate_bitcoin">Donate via Bitcoin</string>
	<string name="donate_bitcoin_text">Simply send some BTC to the following address and drop me an email.</string>
	<string name="copy_to_clipboard">Copy to clipboard</string>
	<string name="send_now">Send now</string>
	<string name="antiWerbungKey">Anti-Ads Key</string>
	<string name="donate_basic">CHF  2.00 - Basic Donation</string>
	<string name="donate_basic_plus">CHF  5.00 - Basic+ (Plus)  Donation</string>
	<string name="donate_bronze">CHF 10.00 - Bronze  Donation</string>
	<string name="donate_silver">CHF 20.00 - Silver  Donation</string>
	<string name="donate_gold">CHF 50.00 - Gold  Donation</string>
    <string name="billing_not_supported_title">Donation not possible at the moment</string>
    <string name="billing_not_supported_message">The Play Store billing service is not available on your device at this time. Please try later or donate by PayPal or credit card.</string>
	<string name="billing_canceled">Payment canceled</string>
	<string name="billing_thanks">Thank you !!!</string>
	<string name="billing_error_consume_finished">Sorry, could not finish transaction !!!</string>
	<string name="learn_more">More Info</string>
    <string name="restoring_transactions">Restoring transactions</string>
	<string name="select">Select</string>	
	<string name="donate_options">Donation Options</string>	
	<string name="bufferZwischenspeicher">Buffer size for recording</string>
	<string name="bufferText">Before writing the mp3 file the data is ongoing stored in a buffer. Here you can configure the buffer size. If you have no problem with recording or you\'re not sure leave it 8192 bytes.</string>
	<string name="errorZahlEingeben">ERROR: Enter a number between\n1 &#8211; 1000000 (1 million) !</string>
	<string name="verbinde">Connecting&#8230;</string>
	<string name="senderNach">Stations by&#8230;</string>
	<string name="laender">Countries</string>
	<string name="favorit">Favorite</string>
	<string name="favoriten">Favorites</string>
	<string name="stil">Genre</string>
	<string name="sortByCountry">By country</string>
	<string name="currentDir">Current Dir</string>
	<string name="folder">Folder</string>
	<string name="fileSize">File Size</string>
	<string name="parentFolder">Parent Folder</string>
	<string name="recordings">Recordings</string>
	<string name="delete">Delete</string>
	<string name="deleted">deleted</string>
	<string name="recordFolderNotFound">Record-Folder Not Found!</string>
	<string name="recordFolderNotFoundMessage">Could not find any folder with RadioRec+ recordings.\nEither you have not recorded anything or the path to the sd card is wrong. The path to the sd card can be configured in the settings.</string>
	<string name="stop">Stop</string>
	<string name="sleepTimerEinstellen">Timer: Move bar to adjust</string>
	<string name="sleepTimerEndIn">Timer: end in %1$s hours</string>
	<string name="timerEnd">Sleep timer end! Good night ;-)</string>
	<string name="radio">Radio</string>
	<string name="timer">Timer</string>
	<string name="appOffAtTimerEnd">Close RadioRec+ after timer ends</string>
	<string name="search">Search</string>
	<string name="searchHint">...search radio station...</string>
	<string name="alphabetisch">Alphabetically</string>
	<string name="nochKeineFavoriten">You have not defined any favorites yet.\nJust press the star at your favorite stations and it will be added to your Favorites.</string>
	<string name="rotation">Rotation</string>
	<string name="rotationOnOff">RadioRec+ always in portrait mode</string>
	<string name="incomingCall">Stoping. Incoming Call</string>
	<string name="alreadyDonated">You have already donated. Thank you!</string>
	<string name="media_route_menu_title">Play on&#8230;</string>
	<string name="stations">Stations</string>
	<string name="casting">Casting</string>
	<string name="multi_window">Multi Window</string>
	<string name="position">Position</string>
	<string name="ClearCannotFindStation">Sorry cannot find station. Please delete your data and try again</string>
								
</resources>
