<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools" tools:context="com.rothconsulting.android.localtv.MainActivity">

	<!-- <item android:id="@+id/menu_item_share" android:showAsAction="always" android:title="@string/share" -->
	<!-- android:actionProviderClass="android.widget.ShareActionProvider" /> -->

	<item android:id="@+id/action_info" android:title="@string/info" android:icon="@android:drawable/ic_menu_info_details"
		app:showAsAction="ifRoom" />

	<item android:id="@+id/action_settings" android:title="@string/settings" android:icon="@android:drawable/ic_menu_preferences"
		app:showAsAction="ifRoom" />

<!-- 	<item android:id="@+id/media_route_menu_item" android:title="@string/media_route_menu_title" -->
<!-- 		app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider" app:showAsAction="always" /> -->

	<item android:id="@+id/action_donate" android:title="@string/donate_adfree" android:icon="@android:drawable/ic_menu_agenda"
		app:showAsAction="always" />

	<item android:id="@+id/action_musicbrowser" android:title="@string/musicBrowser" android:icon="@android:drawable/ic_menu_slideshow"
		app:showAsAction="always" />

	<item android:id="@+id/action_end" android:title="@string/ende" android:icon="@android:drawable/ic_menu_close_clear_cancel"
		app:showAsAction="ifRoom" />

</menu>
