<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<ScrollView android:id="@+id/scroll" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<LinearLayout android:layout_width="fill_parent"
			android:orientation="vertical" android:scrollbars="vertical"
			android:weightSum="1" android:layout_height="fill_parent">
			<EditText android:focusable="true"
				android:focusableInTouchMode="true" android:layout_width="1px"
				android:layout_height="1px" />
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:gravity="center"
				android:layout_gravity="center" android:text="@string/antiAdsText"
				android:textColor="#FFFFFF" android:textSize="15dip"
				android:layout_margin="10dip" android:id="@+id/textViewAntiAds" />
			<TextView android:text="@string/donate_paypal_cc"
				android:id="@+id/textViewTitlePayPalCC" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:background="#0000A0"
				android:textStyle="bold" android:gravity="center" />
			<ImageButton android:src="@drawable/button_paypal_donate_cc_lg" android:contentDescription="@string/donate_paypal_cc"
				android:id="@+id/imageButtonPaypal" android:layout_gravity="center"
				android:layout_width="fill_parent" android:layout_margin="5dip"
				android:background="@android:color/transparent"
				android:layout_height="wrap_content" android:layout_weight="0.20" />
			<TextView android:text="@string/donate_android_market"
				android:id="@+id/textViewTitleAndroidMarket" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:background="#0000A0"
				android:textStyle="bold" android:gravity="center" />
			<ImageButton android:src="@drawable/button_google_play" android:contentDescription="@string/donate_android_market"
				android:id="@+id/imageButtonAndroidMarket" android:layout_gravity="center"
				android:layout_width="fill_parent" android:layout_margin="5dip"
				android:background="@android:color/transparent"
				android:layout_height="wrap_content" android:layout_weight="0.20" />
<!-- 			<TextView android:text="@string/donate_bitcoin" -->
<!-- 				android:gravity="center" android:id="@+id/textViewTitleBitcoin" -->
<!-- 				android:layout_width="fill_parent" android:layout_height="wrap_content" -->
<!-- 				android:background="#0000A0" android:textStyle="bold" /> -->
<!-- 			<ImageButton android:src="@drawable/button_bitcoin" -->
<!-- 				android:id="@+id/imageButtonBitcoin" android:layout_gravity="center" -->
<!-- 				android:layout_width="fill_parent" android:layout_margin="5dip" -->
<!-- 				android:background="@android:color/transparent" -->
<!-- 				android:layout_height="wrap_content" android:layout_weight="0.20" /> -->
			<TextView android:text="@string/antiWerbungKey"
				android:gravity="center" android:id="@+id/textViewTitleAntiAds"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:background="#0000A0" android:textStyle="bold" />
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:layout_gravity="center"
				android:text="@string/antiAdsKeyHere" android:textColor="#FFFFFF"
				android:textSize="15dip" android:layout_margin="10dip"
				android:id="@+id/textViewAntiAdsKeyHere" />
			<EditText android:layout_width="fill_parent"
				android:layout_marginLeft="30dip" android:layout_marginRight="30dip"
				android:layout_height="wrap_content" android:id="@+id/editTextAntiAdsKey" />
			<Button android:layout_marginLeft="30dip"
				android:layout_marginRight="30dip" android:id="@+id/buttonSaveAntiAdsKey"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:text="@string/save" android:layout_gravity="center" />
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
				android:orientation="vertical" android:gravity="center"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:id="@+id/adsLayout">
				<com.google.ads.AdView android:id="@+id/adView"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:gravity="center" ads:adUnitId="a14dc9885936cd9" ads:adSize="BANNER"
					ads:loadAdOnCreate="false" />
			</LinearLayout>
			<Button android:layout_marginTop="0dip"
				android:layout_marginLeft="30dip" android:layout_marginRight="30dip"
				android:id="@+id/buttonZurueck" android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:text="@string/zurueck"
				android:layout_gravity="center" />
		</LinearLayout>
	</ScrollView>

</LinearLayout>
