<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:background="@drawable/bg_land"
	android:gravity="top">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:orientation="vertical" android:background="@drawable/bg_land"
		android:gravity="top">
		<TextView android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:layout_gravity="center"
			android:text="@string/app_name" android:textColor="#BA002B"
			android:textSize="20dip" android:layout_margin="10dip" android:id="@+id/textViewAppName" />
		<TextView android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:layout_gravity="center"
			android:text="@string/info_copyright" android:id="@+id/textViewCopyright"
			android:layout_margin="10dip" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_gravity="center"
			android:id="@+id/textViewInfo" android:layout_margin="10dip"
			android:gravity="center"
			android:text='Beim aufnehmen werden die Dateien auf die SD-Card gespeichert. Du findest sie im Verzeichnis "Radio Recorder".' />
		<TextView android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:layout_gravity="center"
			android:gravity="center"
			android:text="Fehlt dir ein Sender oder ein Feature. Schreib mir einfach ein E-Mail."
			android:id="@+id/textViewFeature" android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip" android:layout_marginTop="10dip" />
		<TextView android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:layout_gravity="center"
			android:id="@+id/textViewEmail" android:layout_marginTop="5dip"
			android:text="@string/email_androider" />
		<TextView android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:layout_gravity="center"
			android:gravity="center"
			android:text="Folgende Frage wurde mir gestellt: Wieviel Daten werden verbraucht beim Radio hören mit RadioRec+ ?? "
			android:id="@+id/textViewDatenverbrauchFrage" android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip" android:layout_marginTop="20dip" android:textColor="#FFFFFF"/>
		<TextView android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:layout_gravity="center"
			android:gravity="center"
			android:text="Antwort: Knapp 60MB/Std. Die Radio-Sender streamen mit 128kbps. Daraus rechnet sich der Verbrauch folgendermassen: 128'000 Bit/s : 8 = 16'000 Byte/s. Das entspricht 57.6 MB/Stunde (16'000x3200 : 1'000'000). Tipp: Verwende WLAN, dann ist der Datenverbrauch kein Thema :-)"
			android:id="@+id/textViewDatenverbrauchAntwort" android:layout_marginLeft="10dip" android:textColor="#FFFFFF"
			android:layout_marginRight="10dip" android:layout_marginTop="2dip" />
		<Button android:layout_margin="30dip" android:id="@+id/buttonZurueck"
			android:layout_height="wrap_content" android:layout_width="fill_parent"
			android:text="@string/zurueck" android:layout_gravity="left" />
	</LinearLayout>
</ScrollView>